# python-bot-lib

./: .gitignore  README.md  build-script.bat  build.bat  build.py  build_upload.py  main.py  pyproject.toml  requirements.txt  run.ps1  setup.py
bot/: __init__.py
bot/argumentos/: __init__.py  __setup.py  setup.py
bot/configfile/: __init__.py  __setup.py  setup.py
bot/database/: __init__.py  __setup.py  odbc.py  oracle.py  resultado.py  setup.py  sqlite.py
bot/dataset/: __init__.py  csv.py  excel.py  setup.py
bot/email/: __init__.py  __setup.py  enviar.py  obter.py  setup.py
bot/erro/: __init__.py  setup.py
bot/estruturas/: __init__.py  __janela.py  __setup.py  decimal.py  filas.py  janela.py  setup.py  string.py
bot/estruturas/filas/: __init__.py  __setup.py  setup.py
bot/formatos/: __init__.py  __setup.py  setup.py
bot/ftp/: __init__.py  __setup.py  setup.py
bot/http/: __init__.py  __setup.py  cliente.py  response.py  setup.py
bot/imagem/: __init__.py  __ocr.py  __setup.py  ocr.py  setup.py
bot/logger/: __init__.py  __setup.py  interfaces.py  setup.py
bot/mensagem/: __init__.py  __setup.py
bot/mouse/: __init__.py  __main__.py  __setup.py  setup.py  win_api.py
bot/navegador/: __init__.py  __mensagem.py  __setup.py  mensagem.py  setup.py
bot/rest/: __init__.py  __setup.py
bot/sistema/: __init__.py  caminho.py  janela.py  setup.py
bot/teclado/: __init__.py  __setup.py  setup.py  win_api.py
bot/tempo/: __init__.py  condicoes.py  cronometro.py  setup.py  timeout.py
bot/tipagem/: __init__.py  __setup.py  setup.py  tipo.py
bot/util/: __init__.py  __setup.py  setup.py
bot/util/decoradores/: __init__.py  __setup.py  setup.py
bot/video/: __init__.py  setup.py
bot/windows/: __init__.py  __setup.py
bot/xml/: __init__.py  __setup.py
exemplos/: argumentos.py  configfile.py  database.py  email.py  estruturas.py  formatos.py  ftp.py  http.py  imagem.py  logger.py  mouse.py  navegador.py  sistema.py  teclado.py  util.py  video.py
