[project]
name = "bot"
version = "4.0"
description = "Biblioteca com funcionalidades gerais para criação de automações para o Windows"
authors = [
  { name = "Alex Lanes Angelo", email = "alex_lanes@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
urls = { Homepage = "https://github.com/AlexLanes/python-bot-lib" }
dependencies = [
  "uv>=0.6.16",

  # mouse / teclado / imagem / sistema / estruturas
  "pywin32",

  # database
  "pyodbc",
  "fastexcel",
  "xlsxwriter",
  "polars[xlsx2csv]",

  # formatos
  "jsonschema",

  # http
  "httpx",

  # imagem
  "numpy==1.26.4",
  "opencv-python",

  # navegador
  "selenium",
  "setuptools",
  "undetected-chromedriver",

  # sistema
  "psutil",
  "comtypes",
  "pyperclip",
]

[project.optional-dependencies]
ocr = ["easyocr"]

[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bot"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
bot = ["**/*"]

[tool.setuptools.exclude-package-data]
bot = ["**/__pycache__/*", "**/*.pyc"]