[project]
name = "bot"
version = "4.0"
description = "Biblioteca com funcionalidades gerais para criação de automações para o Windows"
authors = [
  { name = "Alex Lanes Angelo", email = "alex_lanes@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
urls = { Homepage = "https://github.com/AlexLanes/python-bot-lib" }
dependencies = [
  "uv>=0.8.11",

  # mouse / teclado / imagem / sistema / estruturas
  "pywin32",

  # database
  "pyodbc",
  "fastexcel",
  "xlsxwriter",
  "polars[xlsx2csv]",

  # http
  "httpx",

  # imagem
  "numpy==1.26.4",
  "opencv-python",

  # navegador
  "selenium",
  "setuptools",
  "undetected-chromedriver",

  # sistema
  "psutil",
  "comtypes",
]

[project.optional-dependencies]
ocr = ["easyocr"]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""