[project]
name = "bot"
version = "6.0"
description = "Biblioteca com funcionalidades gerais para criação de automações para o Windows"
authors = [
  { name = "Alex Lanes Angelo", email = "alex_lanes@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
urls = { Homepage = "https://github.com/AlexLanes/python-bot-lib" }
dependencies = [
  "uv>=0.8.11",

  # mouse / teclado / imagem / sistema / estruturas
  "pywin32",

  # database
  "pyodbc",
  "oracledb",

  # http
  "httpx",

  # sistema
  "psutil",
  "comtypes",
]

[project.optional-dependencies]
imagem = ["numpy", "opencv-python"]
ocr = ["numpy==1.26.4", "easyocr", "opencv-python"]
dataset = ["fastexcel", "xlsxwriter", "polars"]
navegador = ["selenium"]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""